--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.linkedin.com/in/henk-jekel-748054259/" target="_blank">
                     <img src="images/linkedin_icon.png" alt="LinkedIn Pictogram" width="35" height="35">
                 </a>
-                <a href="https://github.com/HAJEKEL/pt.darts" target="_blank">
+                <a href="https://github.com/HAJEKEL/teleoperation-delay" target="_blank">
                     <img src="images/github_icon.png" alt="Github Pictogram" width="35" height="35">
                 </a>
                 <a href="mailto:hendrikjekel@gmail.com" target="_blank">
@@ -66,7 +66,7 @@
                 </li>
                 <li><a href="https://www.kaggle.com/hajekel" class="icon brands fa-kaggle"><span
                             class="label">Kaggle</span></a></li>
-                <li><a href="https://github.com/HAJEKEL" class="icon brands alt fa-github"><span
+                <li><a href="https://github.com/HAJEKEL/teleoperation-delay" class="icon brands alt fa-github"><span
                             class="label">GitHub</span></a></li>
             </ul>
         </nav>
@@ -77,7 +77,7 @@
             <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
-                    <span class="date">April 28, 2023</span>
+                    <span class="date">May 2, 2023</span>
                     <h1><a>Effects of time delay on the 
                         performance of a deep sea welding task</a></h1>
                 </header>
